--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.8"
         classpath "org.grails.plugins:views-gradle:1.1.6"
+        classpath "gradle.plugin.com.energizedwork.webdriver-binaries:webdriver-binaries-gradle-plugin:1.4"
     }
 }
 
@@ -24,6 +25,11 @@ apply plugin:"com.moowork.node"
 apply plugin:"asset-pipeline"
 apply plugin:"org.grails.grails-gsp"
 apply plugin:"org.grails.plugins.views-json"
+apply plugin: "com.energizedwork.webdriver-binaries"
+
+ext {
+    seleniumVersion = '3.6.0'
+}
 
 repositories {
     mavenLocal()
@@ -62,9 +68,13 @@ dependencies {
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.8"
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.grails:grails-web-testing-support"
+
     testCompile "org.grails.plugins:geb:1.1.2"
-    testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:2.47.1"
-    testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
+    testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
+    testCompile "org.seleniumhq.selenium:selenium-api:$seleniumVersion"
+    testCompile "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
+    testCompile "org.seleniumhq.selenium:selenium-remote-driver:$seleniumVersion"
+
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 }
 
@@ -102,11 +112,20 @@ task mochaTest(type: YarnTask, dependsOn: 'yarn') {
     args = ['run', 'test']
 }
 
+webdriverBinaries {
+    chromedriver '2.38'
+    geckodriver '0.20.1'
+}
+
 tasks.withType(Test) {
     systemProperty "geb.env", System.getProperty('geb.env')
-    systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
-    systemProperty "webdriver.chrome.driver", System.getProperty('webdriver.chrome.driver')
-    systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
+    systemProperty "geb.build.reportsDir", reporting.file("reports")
+
+    beforeTest { descriptor -> logger.quiet " -- $descriptor" }
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat 'full'
+    }
 }
 
 assets {
